Fix overflow of mode buttons

--- a/src/web/editor/css/editor.css
+++ b/src/web/editor/css/editor.css
@@ -84,5 +84,9 @@
 
 #modeSelector {
     margin-left: 2em;
-    white-space: nowrap;
+    flex: 0 0 auto;
+}
+
+#saveButtonContainer {
+    margin-right: 1em;
 }
